--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @pet.name %>'s' details:</h1>
+<h1><%= @pet.name %>'s details:</h1>
 
 <l1><b><%= @pet.name %></b></l1>
 <li>Breed: <%= @pet.breed %></li>
