Add shelters_path nav link to application.html.erb. All tests passing.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "<< View All Shelters >>", shelters_path %><br>
 <%= link_to "<< View All Pets >>", pets_path %>
 <!DOCTYPE html>
 <html>
