Add test, vist shelter show page, click link taking user to the shelters shelter/:id/pets page.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <%= link_to "<< View All Shelters >>", shelters_path %><br>
-<%= link_to "<< View All Pets >>", pets_path %>
+<%= link_to "<< View All Pets >>", pets_path %><br><br><br>
 <!DOCTYPE html>
 <html>
   <head>
