--- a/app/views/shelter_pets/index.html.erb
+++ b/app/views/shelter_pets/index.html.erb
@@ -1,4 +1,5 @@
 <h1>All <%= "#{@shelter.name}"%>'s pets</h1>
+<%= link_to "Create Pet", "/shelters/#{@shelter.id}/pets/new" %><br>
 
 <ul id="shelter-pets">
   <% @shelter.pets.each do |pet| %>
