--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -3,6 +3,6 @@
 <l1><b><%= @pet.name %></b></l1>
 <li>Breed: <%= @pet.breed %></li>
 <li>Age: <%= @pet.age %></li>
-<li>Is adoptable: <%= @pet.adoptable %></li>
+<li>Is adoptable: <%= @pet.adoptable %></li><br><br>
 
-
+<%= link_to "Update Pet", "/pets/#{@pet.id}/edit" %><br>
