--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -4,3 +4,5 @@
 <li>Has Foster Program: <%= @shelter.foster_program %></li>
 <li>Shelter Rank: <%= @shelter.rank %></li>
 <li>City: <%= @shelter.city %></li>
+
+<%= link_to "Update Shelter", "/shelters/#{@shelter.id}/edit" %><br>
